# nix-flake-templates

./: README.md  flake.nix
templates/python-script/: README.md  flake.nix  pyproject.toml
templates/python-script/src/script/: __init__.py  __main__.py
