[project]
name = "script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.1",
    "numpy>=2.2.5",
    "pyside6>=6.9.0",
    "seaborn>=0.13.2",
]

[project.scripts]
script = "script:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.hatch.build.targets.wheel]
# packages = ["src/script"]

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
